samples/_failures_safe/1761202818_45f6df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_005fa9e0.c: In function ‘main’:
./samples/SAFE/__tmp_005fa9e0.c:133:12: error: missing terminating " character
  133 |     printf("Cross product: (%.3f, %.3f,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_005fa9e0.c:133:5: error: expected expression at end of input
  133 |     printf("Cross product: (%.3f, %.3f,
      |     ^~~~~~
./samples/SAFE/__tmp_005fa9e0.c:133:5: error: expected declaration or statement at end of input
